--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@actbase/react-kakaosdk": "^0.9.19",
     "@eva-design/eva": "^2.1.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
@@ -19,13 +20,17 @@
     "@ui-kitten/components": "^5.1.2",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-config-reader": "^4.1.1",
     "react-native-gesture-handler": "^2.4.1",
     "react-native-nmap": "^0.0.66",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0"
   },
