--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "tunnel": "npx localtunnel --port 3000",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
