--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "moment": "^2.29.3",
+    "npm": "^8.9.0",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-config-reader": "^4.1.1",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-modal": "^13.0.1",
     "react-native-nmap": "^0.0.66",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.2.5",
