--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@actbase/react-kakaosdk": "^0.9.19",
     "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
