--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
@@ -31,14 +32,16 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-config-reader": "^4.1.1",
+    "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "^2.4.2",
-    "react-native-modal": "^13.0.1",
     "react-native-nmap": "^0.0.66",
+    "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
     "react-query": "^3.38.1"
