--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "tunnel": "npx localtunnel --port 3000",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "device": "react-native run-android --variant=release",
     "test": "jest",
     "lint": "eslint ."
   },
