--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-firebase/analytics": "^14.9.4",
     "@react-native-firebase/app": "^14.9.4",
+    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
