--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "tunnel": "npx localtunnel --port 3000",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "android:release": "react-native run-android --variant=release",
     "device": "react-native run-android --variant=release",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@actbase/react-kakaosdk": "^0.9.19",
     "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-firebase/analytics": "^14.9.4",
     "@react-native-firebase/app": "^14.9.4",
-    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -32,6 +31,7 @@
     "npm": "^8.9.0",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-device-info": "^8.7.1",
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-google-mobile-ads": "^6.2.5",
