--- a/ios/gotomap.xcodeproj/xcshareddata/xcschemes/gotomap.xcscheme
+++ b/ios/gotomap.xcodeproj/xcshareddata/xcschemes/gotomap.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "gotomap.app"
-               BlueprintName = "gotomap"
-               ReferencedContainer = "container:gotomap.xcodeproj">
+               BuildableName = "gomap.app"
+               BlueprintName = "gomap"
+               ReferencedContainer = "container:gomap.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "gotomapTests.xctest"
-               BlueprintName = "gotomapTests"
-               ReferencedContainer = "container:gotomap.xcodeproj">
+               BuildableName = "gomapTests.xctest"
+               BlueprintName = "gomapTests"
+               ReferencedContainer = "container:gomap.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "gotomap.app"
-            BlueprintName = "gotomap"
-            ReferencedContainer = "container:gotomap.xcodeproj">
+            BuildableName = "gomap.app"
+            BlueprintName = "gomap"
+            ReferencedContainer = "container:gomap.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "gotomap.app"
-            BlueprintName = "gotomap"
-            ReferencedContainer = "container:gotomap.xcodeproj">
+            BuildableName = "gomap.app"
+            BlueprintName = "gomap"
+            ReferencedContainer = "container:gomap.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
